--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,45 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: black;
+}
+
 h1 {
     color: blue;
+    text-align: center;
+    color: white;
+    font-size: 80px;
+    padding-top: 5%;
+}
+
+.container {
+    background-color: green;
+    margin: 10% 10%;
+    
+}
+
+.card {
+    padding-top: 5%;
+    padding-bottom: 10%;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+}
+
+li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+    width: 100px;
+    aspect-ratio: 1/1;
+    background-color: blue;
+    margin: 0.5rem;
 }
