add color fizz bazz

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,3 +46,15 @@ li {
     background-color: blue;
     margin: 0.5rem;
 }
+
+.red {
+    background-color: red;
+}
+
+.purple {
+    background-color: purple;
+}
+
+.yellow {
+    background-color: yellow;
+}
